added predefined Duration constants